# Frisket-pdf

./: .env.example  .gitattributes  .gitignore  AGENTS.md  AppxManifest.xml.in  CMakeLists.txt  NOTES.txt  README.md  RELEASES.txt  SECURITY.md  make-package.sh.in  test-output.txt  test-verify.txt  vcpkg-configuration.json  vcpkg.json
.codex/environments/: environment.toml
.github/: FUNDING.yml
.github/workflows/: CreateReleaseDraft.yml  LinuxFlatpak.yml  LinuxInstall.yml  WindowsInstall.yml  ci.yml  codeql.yml  fuzz.yml
Desktop/: io.github.mberrys.Frisket-pdf.Pdf4QtDiff.desktop  io.github.mberrys.Frisket-pdf.Pdf4QtEditor.desktop  io.github.mberrys.Frisket-pdf.Pdf4QtPageMaster.desktop  io.github.mberrys.Frisket-pdf.Pdf4QtViewer.desktop  io.github.mberrys.Frisket-pdf.appdata.xml  io.github.mberrys.Frisket-pdf.desktop
Flatpak/: flatpakinfo.txt  io.github.mberrys.Frisket-pdf.json
Fuzz/: CMakeLists.txt  fuzz_content_stream.cpp  fuzz_images.cpp  fuzz_pdf_parser.cpp  fuzz_stream_filters.cpp
Pdf4QtDiff/: main.cpp
Pdf4QtEditor/: CMakeLists.txt  main.cpp
Pdf4QtEditorPlugins/: CMakeLists.txt
Pdf4QtEditorPlugins/FrisketPreflightPlugin/: CMakeLists.txt  FrisketPreflightPlugin.json  frisketpreflightplugin.cpp  frisketpreflightplugin.h  icons.qrc  preflightreportdockwidget.cpp  preflightreportdockwidget.h  preflightreportmodel.cpp  preflightreportmodel.h  preflightsidecarutils.h
Pdf4QtEditorPlugins/OcrPlugin/: CMakeLists.txt  OcrPlugin.json  ocrplugin.cpp  ocrplugin.h  ocrreportdockwidget.cpp  ocrreportdockwidget.h  ocrsidecarutils.h
Pdf4QtEditorPlugins/RedactPlugin/: redactplugin.cpp
Pdf4QtLaunchPad/: CMakeLists.txt  main.cpp
Pdf4QtLibCore/: CMakeLists.txt
Pdf4QtLibCore/sources/: pdfannotation.cpp  pdfbleedfixup.cpp  pdfbleedfixup.h  pdfbleedmarginprobe.cpp  pdfbleedmarginprobe.h  pdfblendfunction.cpp  pdfcatalog.cpp  pdfccittfaxdecoder.cpp  pdfcertificatemanager.cpp  pdfcertificatestore.cpp  pdfcms.cpp  pdfdocumentbuilder.cpp  pdfdocumentreader.cpp  pdfdocumentsanitizer.cpp  pdfdocumentsession.cpp  pdfdocumentsession.h  pdfdocumenttextflow.cpp  pdffilenamesanitizer.cpp  pdffilenamesanitizer.h  pdfflatarray.h  pdffont.cpp  pdfform.cpp  pdffunction.cpp  pdfglobal.h  pdfimage.cpp  pdfjavascriptscanner.cpp  pdfjbig2decoder.cpp  pdfmultimedia.cpp  pdfocrpagegate.cpp  pdfocrpagegate.h  pdfocrreport.cpp  pdfocrreport.h  pdfoptimizer.cpp  pdfoptionalcontent.cpp  pdfpagecontentprocessor.cpp  pdfpagecontentprocessor.h  pdfpagemasterexport.cpp  pdfpagemasterexport.h  pdfpagenavigation.cpp  pdfpreflightchecks.h  (+17 more)
Pdf4QtLibGui/: pdfadvancedfindwidget.cpp  pdfbookmarkui.cpp  pdfeditormainwindow.cpp  pdfeditormainwindow.ui  pdfencryptionstrengthhintwidget.cpp  pdfprogramcontroller.cpp  pdfprogramcontroller.h  pdfsidebarwidget.cpp  pdfviewersettings.cpp
Pdf4QtLibWidgets/: CMakeLists.txt
Pdf4QtLibWidgets/sources/: pdfdrawspacecontroller.cpp  pdfitemmodels.cpp  pdfuitheme.h  pdfwidgetutils.cpp  pdfwidgetutils.h
Pdf4QtPageMaster/: main.cpp  mainwindow.cpp  mainwindow.h  pageitemdelegate.cpp  pageitemmodel.cpp  pdfpageimportdialog.cpp
Pdf4QtViewer/: main.cpp
PdfTool/: CMakeLists.txt  main.cpp  pdfoutputformatter.cpp  pdfoutputformatter.h  pdftoolabstractapplication.cpp  pdftoolabstractapplication.h  pdftooladdbleed.cpp  pdftooladdbleed.h  pdftoolattachments.cpp  pdftoolcancel.h  pdftoolencrypt.cpp  pdftoolocr.cpp  pdftoolocr.h  pdftooloptimize.cpp  pdftoolpreflight.cpp  pdftoolpreflight.h  pdftoolpreflightchecks.h  pdftoolredact.cpp  pdftoolsentryverify.cpp  pdftoolsentryverify.h  pdftoolseparate.cpp  pdftoolunite.cpp  pdftoolverifyredaction.cpp  pdftoolverifyredaction.h
UnitTests/: CMakeLists.txt  tst_bleedfixuptest.cpp  tst_bleedmarginprobetest.cpp  tst_bleedstresstest.cpp  tst_documentsessiontest.cpp  tst_filenamesanitizertest.cpp  tst_ocrclitest.cpp  tst_ocrpagegatetest.cpp  tst_operatoracceptance.cpp  tst_overprinttest.cpp  tst_pagemasterexporttest.cpp  tst_preflightchecks.cpp  tst_preflightcorpus.cpp  tst_preflightenginetest.cpp  tst_preflightplugintest.cpp  tst_redactverifiertest.cpp
WixInstaller/: CMakeLists.txt  Product.wxs.in
cmake/: Pdf4QtSentry.cmake
docs/: BUG_HUNT_2026-07-20.md  CI.md  CODE_HANDOFF_WORKFLOW.md  MIRROR_BLEED_PLAN.md  OCR_EASYOCR_PLAN.md  PACKAGING_LICENSING.md  PLANNING.md  PLATFORM_SUPPORT.md  PREFLIGHT_TIERED_BLEED_PLAN.md  PRODUCTION_RUNBOOK.md  REPO_MAP.md  SPRINT_CYCLE_2_PLAN.md  V1_RELEASE_READINESS.md  attachment-path-audit.md  bleed-stress-test-results.md  v1-operator-acceptance.md
docs/adr/: adr-001-pdf-document-session.md  adr-002-preflight-engine-orchestrator.md  adr-003-pagemaster-export-orchestrator.md  adr-004-pagemaster-batch-manifest.md
frisket-ocr/: README.md  THIRD_PARTY_NOTICES.txt  requirements.txt
frisket-ocr/schemas/: ocr-report.schema.json
frisket-ocr/service/: engine.py  main.py
frisket-ocr/tools/: CMakeLists.txt  dev_ocr_sidecar.cmd  dev_ocr_sidecar.sh  download_models.py  mock_ocr_sidecar.cmd  mock_ocr_sidecar.py  mock_ocr_sidecar.sh  pyinstaller.spec
frisket-preflight/: README.md
frisket-preflight/examples/: profile-tiered-bleed-raster.json  profile-tiered-bleed.json  report-scope-document.json  report-scope-object.json  report-scope-page.json  report.example.json
frisket-preflight/profiles/: frisket-default.json  frisket-default.yaml
frisket-preflight/schemas/: profile.schema.json  report.schema.json
frisket-preflight/testdata/: manifest.schema.json
frisket-preflight/testdata/fixtures/: manifest.json
frisket-preflight/testdata/profiles/: test-trim-pagesize.json  test-white-overprint.json
frisket-preflight/testdata/snapshots/: bleed-adequate.json  (+15 more)
frisket-preflight/tools/: CMakeLists.txt  generate_fixtures.cpp  generate_fixtures.py
ocr-spike/: .gitignore  FINDINGS.md  README.md  generate_fixtures.py  prepare_samples.sh  requirements.txt  run_easyocr_spike.py
ocr-spike/fixtures/: manifest.json
ocr-spike/results/: spike_report.json
scripts/: Invoke-MsiSmokeTest.ps1  dev-env.sh  fuzz-bughunt.sh  generate-third-party-notices.ps1  setup-dev-env.sh  smoke-test-install.ps1
